--- a/WebBased/BlazorAppServer/App.razor
+++ b/WebBased/BlazorAppServer/App.razor
@@ -1,4 +1,5 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿<CascadingAuthenticationState>
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -11,3 +12,4 @@
     </NotFound>
     
 </Router>
+</CascadingAuthenticationState>
